Plesk deployment: IIS config, scripts ve dokumentasyon eklendi

--- a/web.config
+++ b/web.config
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- iisnode modülünü devreye sokuyoruz -->
+    <!-- iisnode modülünü devreye sokuyoruz - dist/index.js Node.js entry point -->
     <handlers>
       <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
     </handlers>
 
-    <!-- Tüm istekleri index.js'e yönlendiriyoruz -->
+    <!-- IIS URL Rewrite kuralları -->
     <rewrite>
       <rules>
+        <!-- Node Inspector için debugging (geliştirme aşamasında kullanılır) -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^index.js\/debug[\/]?" />
         </rule>
+
+        <!-- Statik dosyaları serve et (dist/public klasöründeki CSS, JS, resimler vb.) -->
         <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}" />
+          <conditions>
+            <add input="{REQUEST_URI}" pattern="\.(js|css|png|jpg|gif|svg|ico|woff|woff2|ttf|eot|webp|pdf|zip)$" ignoreCase="True" />
+          </conditions>
+          <action type="None" />
         </rule>
+
+        <!-- Tüm diğer istekleri Node.js uygulamasına yönlendir -->
         <rule name="DynamicContent">
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
@@ -24,11 +32,65 @@
       </rules>
     </rewrite>
 
-    <!-- Node.js hata ve log ayarları -->
+    <!-- iisnode configuration -->
     <iisnode
       node_env="production"
+      nodeProcessCountPerApplication="1"
+      maxConcurrentRequestsPerProcess="1024"
+      maxNamedPipeConnectionRetry="100"
+      namedPipeConnectionRetryDelay="250"
+      maxNamedPipeConnectionPoolSize="512"
+      maxRequestBufferSize="67108864"
+      asyncCompletionThreadCount="4"
+      initialRequestBufferSize="4096"
+      maxRequestBufferSize="67108864"
+      uncFileChangesPollingInterval="5000"
+      gracefulShutdownTimeout="60000"
       loggingEnabled="true"
-      devErrorsEnabled="true"
+      devErrorsEnabled="false"
+      logDirectory="%SystemDrive%\iisnode"
     />
+
+    <!-- MIME types -->
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
+
+    <!-- Compression (perform ve static dosyaları sıkıştır) -->
+    <httpCompression directory="%SystemDrive%\iis_temp\IIS Temporary Compressed Files">
+      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" />
+      <dynamicTypes>
+        <add mimeType="text/html" enabled="true" />
+        <add mimeType="text/plain" enabled="true" />
+        <add mimeType="text/xml" enabled="true" />
+        <add mimeType="text/css" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/html" enabled="true" />
+        <add mimeType="text/plain" enabled="true" />
+        <add mimeType="text/xml" enabled="true" />
+        <add mimeType="text/css" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+      </staticTypes>
+    </httpCompression>
+
+    <!-- Response headers -->
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Content-Type-Options" value="nosniff" />
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+        <add name="X-XSS-Protection" value="1; mode=block" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
+
+  <!-- applicationHost.config için kısıtlamalar -->
+  <system.web>
+    <httpRuntime executionTimeout="3600" />
+  </system.web>
 </configuration>
