--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "plesk-build": "npm install && npm run build",
+    "plesk-build-prod": "npm ci --production && npm run build",
+    "plesk-start": "cross-env NODE_ENV=production node dist/index.js",
+    "plesk-deploy": "npm install && npm run build && cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
